<resources>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>

    <string name="app_name">PrepWise</string>
    <string name="level">Level</string>
    <string name="category">Category</string>
    <string name="questions">questions</string>
    <string name="article_book">Article/book</string>
    <string name="description">Description</string>
    <string name="free_trial">Free trial</string>
    <string name="enter_your_request">Enter your request</string>
    <string name="recommended_from_your_following">Recommended from your following</string>
    <string name="question_sets">Question sets</string>
    <string name="resources">Resources</string>
    <string name="your_activity">Your activity</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_credential_for_login">Enter your credential for login</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="continue_with_Google">Continue with Google</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>

    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create your account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>

    <string name="location">Location</string>
    <string name="my_people">My People</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="prepWise_premium">PrepWise Premium</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="question_for_email">Question</string>

    <string name="Activity">Activity</string>
    <string name="new_followers">New followers</string>
    <string name="you_have_won_an_award">You have won an award</string>
    <string name="you_have_studied_5_modules">You have studied 5 modules. A new profile frame is available to you.</string>
    <string name="you_have_created_a_new_activity_thread">You have created a new activity thread</string>
    <string name="you_have_received_a_help_request">You have received a help request</string>
    <string name="can_you_help_me_with_this_question_please">Can you help me with this question please?
Сlick to view questions -></string>
    <string name="you_have_received_an_answer_to_your_request">You have received an answer to your request</string>
    <string name="here_is_my_answer_maybe_it_will_help">Here is my answer, maybe it will help.
Сlick to view answers -></string>

    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="by">by</string>

    <string name="new_question">New question</string>
    <string name="incoming">Incoming</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>

    <string name="new_question_set">New question set</string>
    <string name="new_resource">New resource</string>
    <string name="name_article_book">Name article/book</string>
    <string name="question_set">Question set</string>
    <string name="folder">Folder</string>
    <string name="resource">Resource</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don`t have an account? </string>

    <string name="choose_language">Choose language</string>

    <string name="folders">Folders</string>
    <string name="shared">Shared</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="search_your_sets">Search your sets</string>
    <string name="search_your_folders">Search your folders</string>
    <string name="search_shared_sets">Search shared sets</string>
    <string name="search_your_resources">Search your resources</string>

    <string name="premium">PREMIUM</string>
    <string name="you_will_receive">You will receive:</string>
    <string name="unlimited_search_results">unlimited search results</string>
    <string name="unlimited_sets">unlimited sets</string>
    <string name="unlimited_number_of_questions_in_the_set">unlimited number of questions in the set</string>
    <string name="the_ability_to_share_access_to_the_set">the ability to share access to the set</string>
    <string name="one_month">1 Month</string>
    <string name="three_day_free_trial">3 day free trial</string>
    <string name="per_month">per month</string>
    <string name="one_year">1 Year</string>
    <string name="save_20">Save 20%</string>
    <string name="per_year">per year</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>

    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="accept">Accept</string>
    <string name="follow_back">Follow back</string>

    <string name="private_str">private</string>
    <string name="public_str">public</string>

    <string name="view_profile">View profile</string>
    <string name="sharing">sharing</string>
    <string name="sharing_view">sharing/view</string>
    <string name="sharing_edit">sharing/edit</string>
    <string name="author">Author:</string>
    <string name="co_authors">Co-authors:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>