<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.LibraryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/rb5hf3b42d"
            style="@style/bold_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Library"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb5hf3b42d">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/question_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_sets" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/folders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folders" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resources" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>