<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingVertical="13dp"
    android:background="@drawable/white_rounded_background"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/set"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/set_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set name"
            style="@style/regular_16"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/access_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/sharing" />

            <TextView
                android:id="@+id/access_type"
                style="@style/light_12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sharing"
                android:textColor="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txt1"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt2"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/level"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/blue_rounded_background"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Junior"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_weight="0">

            <TextView
                android:id="@+id/number_of_questions"
                style="@style/light_12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:text="25"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/txt5"
                style="@style/light_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questions"
                android:textColor="@color/gray" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt3"
            style="@style/semi_bold_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt4"
            style="@style/semi_bold_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/category1"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/blue_rounded_background"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Flutter"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/category2"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/blue_rounded_background"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Kotlin"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/category3"
                style="@style/semi_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/blue_rounded_background"
                android:paddingHorizontal="10dp"
                android:paddingVertical="2dp"
                android:text="Java"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/semi_bold_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginEnd="7dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/username_author"
            style="@style/light_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nahalkaanna"
            android:layout_weight="1"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/semi_bold_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_authors"
            android:layout_marginEnd="7dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/username_co_authos"
            style="@style/light_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="soonias, natagzn"
            android:layout_weight="1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/date"
            style="@style/medium_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.10.2024"
            android:textColor="@color/gray" />

    </LinearLayout>

</LinearLayout>